投稿ページの修正