@@ -48,48 +48,31 @@ public class UserAddPlanServlet extends HttpServlet {
 
 		boolean isError = false;
 
-		// パラメータの取得とバリデーション
+		// 1. タイトルの取得とバリデーション
 		String title = request.getParameter("title");
 		request.setAttribute("title", title); // 再表示用
-		if (title == null || title.isBlank()) {
-			request.setAttribute("titleError", "タイトルを入力してください");
+		if (title == null || title.trim().isEmpty()) {
+			request.setAttribute("titleError", "タイトルを入力してください。");
 			isError = true;
 		} else if (title.length() > 50) {
-			request.setAttribute("titleError", "全角で50字以内、または半角100字以内で入力してください。");
+			request.setAttribute("titleError", "タイトルは50文字以内で入力してください。");
 			isError = true;
 		}
 
+		// 2. 目的地の取得とバリデーション
 		String place = request.getParameter("place");
-		if (place.isBlank()) {
-			request.setAttribute("placeError", "目的地を選択してください");
+		if (place == null || place.trim().isEmpty()) {
+			request.setAttribute("placeError", "目的地を選択してください。");
 			isError = true;
 		}
 		request.setAttribute("place", place); // 再表示用
 
-		/*
-		 
-		// カテゴリIDの取得
-		String[] categoryIdStrings = request.getParameterValues("categoryIds");
-		List<Integer> categoryIds = new ArrayList<>();
-		if (categoryIdStrings != null) {
-			for (String id : categoryIdStrings) {
-				try {
-					categoryIds.add(Integer.parseInt(id));
-				} catch (NumberFormatException e) {
-					request.setAttribute("categoryError", "無効なカテゴリが選択されました");
-					isError = true;
-					break;
-				}
-			}
-		}
-		
-		request.setAttribute("categoryIds", categoryIds); // 再表示用
-		 */
-
+		// 3. パラメータの取得と初期化
 		String[] scheduleTransports = request.getParameterValues("scheduleTransport[]");
 		if (scheduleTransports == null) {
 			scheduleTransports = new String[0];
 		}
+
 		String[] hours = request.getParameterValues("hours[]");
 		if (hours == null) {
 			hours = new String[0];
@@ -99,9 +82,6 @@ public class UserAddPlanServlet extends HttpServlet {
 		if (minutes == null) {
 			minutes = new String[0];
 		}
-
-		// 同様に schedulePlaces, scheduleTransports, scheduleComments なども
-		// null チェックして空配列に置き換える
 
 		String[] schedulePlaces = request.getParameterValues("schedulePlace[]");
 		if (schedulePlaces == null) {
@@ -113,42 +93,70 @@ public class UserAddPlanServlet extends HttpServlet {
 			scheduleComments = new String[0];
 		}
 
-		// 画像ファイル名を格納するリスト
+		// 4. 画像アップロード処理
 		List<String> scheduleImages = new ArrayList<>();
 
-		// パート情報を取得
-		Collection<Part> parts = request.getParts();
-
-		for (Part part : parts) {
-			// フォームの name 属性が "scheduleImage[]" であるか確認
-			if (part.getName().equals("scheduleImage[]")) {
-				String type = part.getContentType();
-				// ファイル名が空でない場合に処理を続行
-				if (part.getSize() > 0 && type != null) {
-					// 画像ファイルか否かのチェック
-					if (type.startsWith("image/")) {
-						// ファイル名を生成
-						String fileName = System.currentTimeMillis() + "-" + part.getSubmittedFileName();
-
-						// 画像アップロード
-						ServletContext ctx = request.getServletContext(); // ServletContextを取得
-						String path = ctx.getRealPath("/photo"); // 保存先のフォルダパスを取得
-						part.write(path + "/" + fileName); // ファイルを保存
-
-						// 画像の相対パスをリストに追加
-						scheduleImages.add("/photo/" + fileName);
+		try {
+			Collection<Part> parts = request.getParts();
+			for (Part part : parts) {
+				if (part.getName().equals("scheduleImage[]")) {
+					String type = part.getContentType();
+					if (part.getSize() > 0 && type != null) {
+						if (type.startsWith("image/")) {
+							String fileName = System.currentTimeMillis() + "-" + part.getSubmittedFileName();
+							ServletContext ctx = request.getServletContext();
+							String path = ctx.getRealPath("/photo");
+							part.write(path + "/" + fileName);
+							scheduleImages.add("/photo/" + fileName);
+						} else {
+							request.setAttribute("scheduleImagesError", "画像形式のファイルを選択してください。");
+							isError = true;
+							scheduleImages.add(""); // プレースホルダーとして空文字を追加
+						}
 					} else {
-						// 画像以外のファイルが選択された場合、エラーメッセージを設定
-						request.setAttribute("scheduleImagesError", "画像形式のファイルを選択してください");
-						isError = true;
-						scheduleImages.add(""); // プレースホルダーとして空文字を追加
+						scheduleImages.add(""); // 画像がアップロードされなかった場合のプレースホルダー
 					}
-				} else {
-					scheduleImages.add(""); // 画像がアップロードされなかった場合のプレースホルダー
 				}
+			}
+		} catch (Exception e) {
+			request.setAttribute("scheduleImagesError", "画像のアップロード中にエラーが発生しました。");
+			isError = true;
+		}
+
+		// 5. 画像の数を schedulePlaces.length に合わせる
+		while (scheduleImages.size() < schedulePlaces.length) {
+			scheduleImages.add("");
+		}
+
+		// 6. スポット名のバリデーション: すべてのスポット名が必須かつ20文字以内
+		for (int i = 0; i < schedulePlaces.length; i++) {
+			String placeName = schedulePlaces[i];
+			if (placeName == null || placeName.trim().isEmpty()) {
+				request.setAttribute("schedulePlacesError", "すべてのスポット名を入力してください。");
+				isError = true;
+				break; // 一つでもエラーがあればループを抜ける
+			} else if (placeName.length() > 20) {
+				request.setAttribute("schedulePlacesError", "スポット名は20文字以内で入力してください。");
+				isError = true;
+				break;
 			}
 		}
 
+		// 7. 移動手段と所要時間のバリデーション
+		for (int i = 0; i < schedulePlaces.length; i++) {
+			String transport = (i < scheduleTransports.length) ? scheduleTransports[i] : "";
+			String hour = (i < hours.length) ? hours[i] : "";
+			String minute = (i < minutes.length) ? minutes[i] : "";
+
+			// 所要時間が設定されている場合、移動手段も必須
+			if ((!hour.isEmpty() || !minute.isEmpty()) && (transport == null || transport.isEmpty())) {
+				request.setAttribute("scheduleTransportsError", "所要時間が設定されている場合、移動手段も必須です。");
+				isError = true;
+				break; // 一つでもエラーがあればループを抜ける
+			}
+		}
+
+		// 8. リクエストスコープにセット（再表示用）
 		request.setAttribute("scheduleTransports", scheduleTransports);
 		request.setAttribute("hours", hours);
 		request.setAttribute("minutes", minutes);
@@ -156,49 +164,42 @@ public class UserAddPlanServlet extends HttpServlet {
 		request.setAttribute("scheduleComments", scheduleComments);
 		request.setAttribute("scheduleImages", scheduleImages);
 
-		// バリデーション: スポット名のチェック
-		if (schedulePlaces == null || schedulePlaces[0].isBlank()) {
-			request.setAttribute("schedulePlacesError", "スポット名を入力してください。");
-			isError = true;
-		} else {
-			for (int i = 1; i < schedulePlaces.length; i++) {
-				if (!schedulePlaces[i].isBlank() && schedulePlaces[i].length() > 30) {
-					request.setAttribute("schedulePlaceError", "スポット名は30文字以内で入力してください。");
-					isError = true;
-					break;
-				}
-			}
-		}
-
-		// バリデーション: 移動手段が必須
-		for (int i = 0; i < hours.length; i++) {
-			if ((!hours[i].isEmpty() || !minutes[i].isEmpty()) && (scheduleTransports[i].isEmpty())) {
-				request.setAttribute("scheduleTransportsError", "所要時間が設定されている場合、移動手段も必須です。");
-				isError = true;
-			}
-		}
-
+		// 9. エラーがあれば再表示
 		if (isError) {
 			request.getRequestDispatcher("/WEB-INF/view/user/addPlan.jsp")
 					.forward(request, response);
 			return;
 		}
 
+		// 10. 文字列連結のループ（schedulePlaces.length を基準）
 		StringBuilder scheduleData = new StringBuilder();
-		for (int i = 0; i < scheduleTransports.length; i++) {
+		for (int i = 0; i < schedulePlaces.length; i++) {
+			// 移動手段と時間を安全に取得
+			String transport = (i < scheduleTransports.length && scheduleTransports[i] != null) ? scheduleTransports[i]
+					: "";
+			String hour = (i < hours.length && hours[i] != null) ? hours[i] : "";
+			String minute = (i < minutes.length && minutes[i] != null) ? minutes[i] : "";
+
+			// 時間のフォーマット
 			String time = "";
-			if (!hours[i].isEmpty() && !minutes[i].isEmpty()) {
-				time = hours[i] + "時間 " + minutes[i] + "分";
-			} else if (!hours[i].isEmpty()) {
-				time = hours[i] + "時間";
-			} else if (!minutes[i].isEmpty()) {
-				time = minutes[i] + "分";
+			if (!hour.isEmpty() && !minute.isEmpty()) {
+				time = hour + "時間 " + minute + "分";
+			} else if (!hour.isEmpty()) {
+				time = hour + "時間";
+			} else if (!minute.isEmpty()) {
+				time = minute + "分";
 			}
 
-			scheduleData.append("スポット名: ").append(schedulePlaces[i])
-					.append(" | コメント: ").append(scheduleComments[i] != null ? scheduleComments[i] : "")
-					.append(" | 写真: ").append(scheduleImages.get(i)) // 必ずインデックスが一致する
-					.append(" | 移動手段: ").append(scheduleTransports[i] != null ? scheduleTransports[i] : "")
+			// スポット名、コメント、画像を安全に取得
+			String spot = schedulePlaces[i];
+			String comment = (i < scheduleComments.length && scheduleComments[i] != null) ? scheduleComments[i] : "";
+			String image = (i < scheduleImages.size() && scheduleImages.get(i) != null) ? scheduleImages.get(i) : "";
+
+			// 文字列連結
+			scheduleData.append("スポット名: ").append(spot)
+					.append(" | コメント: ").append(comment)
+					.append(" | 写真: ").append(image)
+					.append(" | 移動手段: ").append(transport)
 					.append(" | 所要時間: ").append(time)
 					.append("\n");
 		}
@@ -206,12 +207,13 @@ public class UserAddPlanServlet extends HttpServlet {
 		String scheduleText = scheduleData.toString();
 		User user = (User) request.getSession().getAttribute("user");
 
+		// 11. Plan オブジェクトの作成とデータベースへの保存
 		Plan plan = new Plan();
 		plan.setTitle(title);
 		plan.setSchedule(scheduleText);
 		plan.setPlace(place);
 		plan.setUser(user);
-		//		plan.setCategoryIds(categoryIds); // カテゴリIDリストをセット
+		// plan.setCategoryIds(categoryIds); // カテゴリIDリストをセット（必要に応じて）
 
 		try {
 			PlanDao planDao = DaoFactory.createPlanDao();
